test/spec_vectors/i32/fail/module_25.wat
(module (func $type-binary-1st-operand-empty-in-if (i32.const 0) (i32.const 0) (i32.const 0) (if (i32.add) (then (drop)))))